--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -11,7 +11,7 @@ jobs:
   test:
     strategy:
       matrix:
-        containers: [ 1.22, 1.21, 1.20 ]
+        containers: [ 1.22 ]
     runs-on: ubuntu-latest
     container: golang:${{ matrix.containers }}
     steps:
