--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,71 +1,49 @@
-linters-settings:
-  govet:
-    enable-all: true
-  revive:
-    confidence: 0.1
-    rules:
-      - name: package-comments
-        disabled: true
-  goconst:
-    min-len: 2
-    min-occurrences: 2
-  misspell:
-    locale: US
-  lll:
-    line-length: 140
-  gocritic:
-    enabled-tags:
-      - performance
-      - style
-      - experimental
-    disabled-checks:
-      - hugeParam
-      - commentedOutCode
-  gci:
-    sections:
-      - standard
-      - default
-
+version: "2"
 linters:
+  default: none
   enable:
     - bodyclose
-    - revive
-    - govet
-    - unconvert
-    - gosec
-    - gocyclo
     - dupl
-    - misspell
-    - unparam
-    - typecheck
-    - ineffassign
-    - stylecheck
+    - errcheck
     - gochecknoinits
     - gocritic
+    - gocyclo
+    - gosec
+    - govet
+    - ineffassign
+    - misspell
     - nakedret
-    - gosimple
     - prealloc
+    - revive
+    - staticcheck
+    - unconvert
+    - unparam
+    - unused
+  settings:
+    goconst:
+      min-len: 2
+      min-occurrences: 2
+    govet:
+      enable-all: true
+    lll:
+      line-length: 140
+    misspell:
+      locale: US
+    revive:
+      confidence: 0.1
+      rules:
+        - name: package-comments
+          disabled: true
+  exclusions:
+    rules:
+      - linters:
+          - staticcheck
+        text: at least one file in a package should have a package comment
+      - linters:
+          - revive
+        text: should have a package comment, unless it's in another file for this package
+formatters:
+  enable:
     - gci
-    - errcheck
     - gofmt
     - goimports
-    - staticcheck
-    - unused
-  fast: false
-  disable-all: true
-
-issues:
-  exclude-rules:
-    - text: "at least one file in a package should have a package comment"
-      linters:
-        - stylecheck
-    - text: "should have a package comment, unless it's in another file for this package"
-      linters:
-        - revive
-    - text: "appendAssign: *"
-      linters:
-        - gocritic
-    - text: "fieldalignment: struct with *"
-      linters:
-        - govet
-  exclude-use-default: false
